<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtV_nombre"
        android:layout_width="65dp"
        android:layout_height="38dp"
        android:text="@string/txtV_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/txtV_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_apellido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_nombre"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/txtV_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_edad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_apellido"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/txtV_posicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_posicion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtV_nombre"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/txtV_seguro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_seguro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <CheckBox
        android:id="@+id/cb_seguro_si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_seguro_si"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtV_seguro"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cb_seguro_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_seguro_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtV_seguro"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Ptxt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Ptxt_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/Ptxt_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Ptxt_apellido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="@+id/txtV_apellido"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <SeekBar
        android:id="@+id/sbD_edad"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="229dp"
        android:layout_height="23dp"
        android:min="0"
        android:max="4"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtV_edad"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/rbG_agrupaciones"
        android:layout_width="269dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtV_posicion"
        app:layout_constraintVertical_bias="0.119">

        <RadioButton
            android:id="@+id/rb_delantero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_delantero" />

        <RadioButton
            android:id="@+id/rb_centrocampista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_centrocampista" />

        <RadioButton
            android:id="@+id/rb_defensa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_defensa" />

        <RadioButton
            android:id="@+id/rb_portero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_portero" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtV_resumen"
        android:layout_width="328dp"
        android:layout_height="101dp"
        android:text="@string/txtV_resumen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <Button
        android:id="@+id/b_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

</androidx.constraintlayout.widget.ConstraintLayout>